@@ -18,7 +18,6 @@ if ( empty ( $HTTP_USER_AGENT ) )
     <p>' .
   translate ( 'Please include all the information below when reporting a bug.' )
    . ( $LANGUAGE != 'English-US' ? ' '
-// translate ( 'Also, please use English rather than' )
      . str_replace ('XXX', translate ( get_browser_language ( true ) ),
      translate ( 'Also, please use English rather than XXX.' ) ) : '' ) . '</p>
     <form action="http://sourceforge.net/tracker/" target="_new">
