@@ -86,7 +86,6 @@ user_load_variables ( $login, 'minical_' );
 
 if ( $user != '__public__' && ! nonuser_load_variables ( $login, 'minica_' ) )
   die_miserable_death (
-    // translate ( 'No such nonuser calendar' )
     str_replace ( 'XXX', $login,
       translate ( 'No such nonuser calendar XXX.' ) ) );
 
